Google Images Sucess

--- a/project0/search/image.html
+++ b/project0/search/image.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Google Image</title>
 </head>
 <body>
@@ -12,5 +12,15 @@
       <li class="navbar-google-item"><a href="index.html">Google</a></li>
     </ul>
   </div>
+  <div class="div-image-google">
+    <img src="./img/googleimage.png" alt="GoogleIcon" height="92px">
+  </div>
+  <form action="https://www.google.com/search">
+    <input type="text" name="q" class="input-google">
+    <input type="hidden" name="tbm" value="isch" > 
+    <div class="div-image-google">
+      <input type="submit" value="Google Image" class="button-search">
+    </div>
+    </form>
 </body>
 </html>
