--- a/project0/search/index.html
+++ b/project0/search/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Search</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     </ul>
   </div>
   <div class="div-image-google">
-    <img src="googleimage" alt="GoogleIcon" height="92px">
+    <img src="./img/google" alt="GoogleIcon" height="92px">
   </div>
   <form action="https://www.google.com/search">
     <input type="text" name="q" class="input-google">
@@ -23,7 +23,7 @@
       <input type="submit" value="Google Search" class="button-search">
       <input type="submit" value="I'm Feeling Lucky" class="button-search">
     </div>
-    </form>
+  </form>
 
 </body>
 </html>
