--- a/project0/search/index.html
+++ b/project0/search/index.html
@@ -21,7 +21,7 @@
     <input type="text" name="q" class="input-google">
     <div class="div-image-google">
       <input type="submit" value="Google Search" class="button-search">
-      <input type="submit" value="I'm Feeling Lucky" class="button-search">
+      <input type="submit" name="btnI" value="I'm Feeling Lucky" class="button-search">
     </div>
   </form>
 
