--- a/project0/search/advanced.html
+++ b/project0/search/advanced.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
   <title>Google Advanced</title>
 </head>
@@ -12,5 +13,52 @@
       <li class="navbar-google-item"><a href="index.html">Google</a></li>
     </ul>
   </div>
+
+  <p class="h1-advanced">Advanced Search</p>
+  <div class="linha"></div>
+  <div class="div-advanced">
+    <p class="h2-advanced">Find pages with...</p>
+  </div>
+  <form action="https://www.google.com/search">
+
+    <div class="row-input">
+        <div class="left">
+          <p class="p-advanced">All the words:</p>
+        </div>
+        <div class="right">
+          <input type="text" name="as_q" class="form-control" style="border: 1px solid rgb(83, 83, 83);">
+        </div>
+    </div>
+
+      <div class="row-input">
+        <div class="left">
+          <p class="p-advanced">This exact word or phrase:</p>
+        </div>
+        <div class="right">
+          <input type="text" name="as_epq" class="form-control" style="border: 1px solid rgb(83, 83, 83);">
+        </div>
+      </div>
+
+      <div class="row-input">
+        <div class="left">
+          <p class="p-advanced">Any of these words:</p>
+        </div>
+        <div class="right">
+          <input type="text" name="as_oq" class="form-control" style="border: 1px solid rgb(83, 83, 83);">
+        </div>
+      </div>
+
+      <div class="row-input">
+        <div class="left">
+          <p class="p-advanced">None of these words:</p>
+        </div>
+        <div class="right">
+          <input type="text" name="as_eq" class="form-control" style="border: 1px solid rgb(83, 83, 83);">
+        </div>
+      </div>
+      <div class="btn-div">
+        <input type="submit" value="Advanced Search" class="btn btn-advanced">
+      </div>
+  </form>
 </body>
 </html>
